# trading-system-public

./: .env.example  .gitignore  Dockerfile  README.ko.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/: config.py  main.py
src/agents/: backend.py  claude_backend.py  models.py  openai_backend.py  orchestrator.py  sandbox.py  swarm.py
src/agents/prompts/: analyst.md  contrarian.md  reviewer.md  risk_guard.md  strategist.md  technical.md
src/brokers/: base.py  kiwoom.py  upbit.py
src/data/: collector.py
src/db/: repository.py  schema.py
src/engine/: backtest.py  executor.py  risk_manager.py  scheduler.py
src/reporters/: discord.py  telegram_notifier.py
src/strategies/: base.py  double_bb_short.py  registry.py  simple_rsi.py  squeeze_mtf.py
src/telegram/: bot.py  middleware.py
src/telegram/handlers/: ai.py  monitor.py  strategy.py  system.py  trade.py
src/utils/: formatters.py  indicators.py
tests/test_agents/: test_claude_backend.py  test_models.py  test_orchestrator.py  test_sandbox.py
tests/test_data/: test_collector.py  test_market_data_repo.py
tests/test_engine/: test_db.py  test_risk_manager.py
tests/test_strategies/: test_double_bb_short.py  test_simple_rsi.py  test_squeeze_mtf.py
